# parse_template

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  date_formatting.md  daw_parse_template.cpp  make_deps.sh  readme.md  test_template.shtml  vcpkg.json
dependent_projects/: CMakeLists.txt  dependencies.txt
include/: daw_parse_template.h
include/daw/: daw_parse_template.h
include/daw/parse_template_impl/: daw_function_traits.h
src/: daw_parse_template.cpp
src/daw/: daw_parse_template.cpp
tests/: CMakeLists.txt  example_parse_template.cpp
